Add autoconf support for DD updates

--- a/include/geos/algorithm/Makefile.am
+++ b/include/geos/algorithm/Makefile.am
@@ -1,9 +1,10 @@
 #
-# This file is part of project GEOS (http://trac.osgeo.org/geos/) 
+# This file is part of project GEOS (http://trac.osgeo.org/geos/)
 #
 SUBDIRS = \
-    locate \
-    distance
+	locate \
+	distance \
+	ttmath
 
 EXTRA_DIST =
 
@@ -33,4 +34,4 @@ geos_HEADERS = \
     RayCrossingCounter.h \
     RobustDeterminant.h \
     SimplePointInRing.h \
-    SIRtreePointInRing.h     
+    SIRtreePointInRing.h
