Blind port for RayCrossingCounterDD and some minor changes to existing files

--- a/include/geos/algorithm/Makefile.am
+++ b/include/geos/algorithm/Makefile.am
@@ -11,27 +11,28 @@ EXTRA_DIST =
 geosdir = $(includedir)/geos/algorithm
 
 geos_HEADERS = \
-    Angle.h \
-    BoundaryNodeRule.h \
-    CentralEndpointIntersector.h \
-    Centroid.h \
-    CentroidArea.h \
-    CentroidLine.h \
-    CentroidPoint.h \
-    CGAlgorithms.h \
-    ConvexHull.h \
-    ConvexHull.inl \
-    HCoordinate.h \
-    InteriorPointArea.h \
-    InteriorPointLine.h \
-    InteriorPointPoint.h \
-    LineIntersector.h \
-    MCPointInRing.h \
-    MinimumDiameter.h \
-    NotRepresentableException.h \
-    PointInRing.h \
-    PointLocator.h \
-    RayCrossingCounter.h \
-    RobustDeterminant.h \
-    SimplePointInRing.h \
-    SIRtreePointInRing.h
+	Angle.h \
+	BoundaryNodeRule.h \
+	CentralEndpointIntersector.h \
+	Centroid.h \
+	CentroidArea.h \
+	CentroidLine.h \
+	CentroidPoint.h \
+	CGAlgorithms.h \
+	ConvexHull.h \
+	ConvexHull.inl \
+	HCoordinate.h \
+	InteriorPointArea.h \
+	InteriorPointLine.h \
+	InteriorPointPoint.h \
+	LineIntersector.h \
+	MCPointInRing.h \
+	MinimumDiameter.h \
+	NotRepresentableException.h \
+	PointInRing.h \
+	PointLocator.h \
+	RayCrossingCounter.h \
+	RayCrossingCounterDD.h \
+	RobustDeterminant.h \
+	SimplePointInRing.h \
+	SIRtreePointInRing.h
