--- a/src/algorithm/Makefile.am
+++ b/src/algorithm/Makefile.am
@@ -1,43 +1,40 @@
 #
-# This file is part of project GEOS (http://trac.osgeo.org/geos/) 
+# This file is part of project GEOS (http://trac.osgeo.org/geos/)
 #
 SUBDIRS = \
-    locate \
-    distance
+	locate \
+	distance
 
 noinst_LTLIBRARIES = libalgorithm.la
 
-AM_CPPFLAGS = -I$(top_srcdir)/include 
+AM_CPPFLAGS = -I$(top_srcdir)/include
 
 libalgorithm_la_SOURCES = \
-    Angle.cpp \
-    BoundaryNodeRule.cpp \
-    Centroid.cpp \
-    CentroidArea.cpp \
-    CentroidLine.cpp \
-    CentroidPoint.cpp \
-    CGAlgorithms.cpp \
-    CGAlgorithmsDD.cpp \
-    ConvexHull.cpp \
-    HCoordinate.cpp \
-    InteriorPointArea.cpp \
-    InteriorPointLine.cpp \
-    InteriorPointPoint.cpp \
-    LineIntersector.cpp \
-    MCPointInRing.cpp \
-    MinimumDiameter.cpp \
-    NotRepresentableException.cpp \
-    PointLocator.cpp \
-    RayCrossingCounter.cpp \
-    RobustDeterminant.cpp \
-    SimplePointInRing.cpp \
-    SIRtreePointInRing.cpp 
+	Angle.cpp \
+	BoundaryNodeRule.cpp \
+	Centroid.cpp \
+	CentroidArea.cpp \
+	CentroidLine.cpp \
+	CentroidPoint.cpp \
+	CGAlgorithms.cpp \
+	CGAlgorithmsDD.cpp \
+	ConvexHull.cpp \
+	HCoordinate.cpp \
+	InteriorPointArea.cpp \
+	InteriorPointLine.cpp \
+	InteriorPointPoint.cpp \
+	LineIntersector.cpp \
+	MCPointInRing.cpp \
+	MinimumDiameter.cpp \
+	NotRepresentableException.cpp \
+	PointLocator.cpp \
+	RayCrossingCounter.cpp \
+	RayCrossingCounterDD.cpp \
+	RobustDeterminant.cpp \
+	SimplePointInRing.cpp \
+	SIRtreePointInRing.cpp
 
-# Deprecated files
-# (http://geos.osgeo.org/pipermail/geos-devel/2006-March/001828.html):
-#NonRobustLineIntersector.cpp
-#RobustLineIntersector.cpp
 
-libalgorithm_la_LIBADD =  \
-        locate/liblocation.la \
-        distance/libdistance.la
+libalgorithm_la_LIBADD = \
+	locate/liblocation.la \
+	distance/libdistance.la
