Delete obsolete PointInRing classes JTS 55fb1113655db08a9a4ce4c17c9ee5912b6aa0f2

--- a/include/geos/algorithm/Makefile.am
+++ b/include/geos/algorithm/Makefile.am
@@ -25,10 +25,7 @@ geos_HEADERS = \
 	LineIntersector.h \
 	MinimumDiameter.h \
 	NotRepresentableException.h \
-	PointInRing.h \
 	PointLocator.h \
 	RayCrossingCounter.h \
 	RayCrossingCounterDD.h \
-	RobustDeterminant.h \
-	SimplePointInRing.h \
-	SIRtreePointInRing.h
+	RobustDeterminant.h
