Move area functions to Area class JTS e06c0c9ce27abdf84f8dc897baac06cc70a2eed7

--- a/include/geos/algorithm/Makefile.am
+++ b/include/geos/algorithm/Makefile.am
@@ -12,6 +12,7 @@ geosdir = $(includedir)/geos/algorithm
 
 geos_HEADERS = \
 	Angle.h \
+	Area.h \
 	BoundaryNodeRule.h \
 	CentralEndpointIntersector.h \
 	Centroid.h \
