Move length functions to Length class JTS 1b7bb75fcdeb1cbde1fe6c6deb2cde18929868d7

--- a/src/algorithm/Makefile.am
+++ b/src/algorithm/Makefile.am
@@ -22,6 +22,7 @@ libalgorithm_la_SOURCES = \
 	InteriorPointLine.cpp \
 	InteriorPointPoint.cpp \
 	LineIntersector.cpp \
+	Length.cpp \
 	MinimumDiameter.cpp \
 	NotRepresentableException.cpp \
 	PointLocator.cpp \
