--- a/include/geos/algorithm/Makefile.am
+++ b/include/geos/algorithm/Makefile.am
@@ -24,6 +24,7 @@ geos_HEADERS = \
 	InteriorPointLine.h \
 	InteriorPointPoint.h \
 	LineIntersector.h \
+	Length.h \
 	MinimumDiameter.h \
 	NotRepresentableException.h \
 	PointLocator.h \
