Move CGAlgorithms functions into Orientation class JTS 4c4ccd7fe5c758abb48647da60dacf8e4cd7f9df

--- a/include/geos/algorithm/Makefile.am
+++ b/include/geos/algorithm/Makefile.am
@@ -27,6 +27,7 @@ geos_HEADERS = \
 	Length.h \
 	MinimumDiameter.h \
 	NotRepresentableException.h \
+	Orientation.h \
 	PointLocator.h \
 	RayCrossingCounter.h \
 	RayCrossingCounterDD.h \
