Move CGAlgorithms point location functions to PointLocation JTS 555e2cbc45ce6207e3b4df9842cbb25220c494d5

--- a/include/geos/algorithm/Makefile.am
+++ b/include/geos/algorithm/Makefile.am
@@ -28,6 +28,7 @@ geos_HEADERS = \
 	MinimumDiameter.h \
 	NotRepresentableException.h \
 	Orientation.h \
+	PointLocation.h \
 	PointLocator.h \
 	RayCrossingCounter.h \
 	RayCrossingCounterDD.h \
