Refactor CGAlgorithms distance functions into Distance class JTS 6103203279ec05e43c625d4f1b4377c93ff52934

--- a/src/algorithm/Makefile.am
+++ b/src/algorithm/Makefile.am
@@ -17,6 +17,7 @@ libalgorithm_la_SOURCES = \
 	CGAlgorithms.cpp \
 	CGAlgorithmsDD.cpp \
 	ConvexHull.cpp \
+	Distance.cpp \
 	HCoordinate.cpp \
 	InteriorPointArea.cpp \
 	InteriorPointLine.cpp \
