--- a/include/geos/algorithm/Makefile.am
+++ b/include/geos/algorithm/Makefile.am
@@ -19,6 +19,7 @@ geos_HEADERS = \
 	CGAlgorithms.h \
 	ConvexHull.h \
 	ConvexHull.inl \
+	Distance.h \
 	HCoordinate.h \
 	InteriorPointArea.h \
 	InteriorPointLine.h \
