--- a/configure.ac
+++ b/configure.ac
@@ -11,22 +11,30 @@ AC_CANONICAL_SYSTEM
 AC_CONFIG_MACRO_DIR([macros])
 
 dnl -- JTS_PORT: the version of JTS this release is bound to
-JTS_PORT=1.13.0
+dnl JTS_PORT=1.13.0
+JTS_PORT=`cat Version.txt | grep ^JTS_PORT | sed 's/[[^=]]*=\([[0-9a-zA-Z\.]]\)/\1/g'`
 
 dnl -- Version info for the CAPI
-CAPI_INTERFACE_CURRENT=13
-CAPI_INTERFACE_REVISION=0
-CAPI_INTERFACE_AGE=12
+dnl CAPI_INTERFACE_CURRENT=13
+dnl CAPI_INTERFACE_REVISION=0
+dnl CAPI_INTERFACE_AGE=12
 
 dnl
 dnl -- Release versions / C++ library SONAME will use these
 dnl -- encoding ABI break at every release
 dnl
-VERSION_MAJOR=3
-VERSION_MINOR=8
-VERSION_PATCH=0dev
+VERSION_MAJOR=`cat Version.txt | awk -F= '/^GEOS_VERSION_MAJOR/ {print $2}'`
+VERSION_MINOR=`cat Version.txt | awk -F= '/^GEOS_VERSION_MINOR/ {print $2}'`
+VERSION_PATCH=`cat Version.txt | awk -F= '/^GEOS_VERSION_PATCH/ {print $2}'`
+PATCH_WORD=`cat Version.txt    | awk -F= '/^GEOS_PATCH_WORD/ {print $2}'`
+
+VERSION_PATCH=${VERSION_PATCH}${PATCH_WORD}
 VERSION="$VERSION_MAJOR.$VERSION_MINOR.$VERSION_PATCH"
 VERSION_RELEASE=`echo "$VERSION" | sed -E 's/^([[0-9]+\.[0-9]+\.[0-9]+]).*$/\1/'`
+
+CAPI_INTERFACE_CURRENT=`cat Version.txt  | awk -F= '/^CAPI_INTERFACE_CURRENT/ {print $2}'`
+CAPI_INTERFACE_REVISION=`cat Version.txt | awk -F= '/^CAPI_INTERFACE_REVISION/ {print $2}'`
+CAPI_INTERFACE_AGE=`cat Version.txt      | awk -F= '/^CAPI_INTERFACE_AGE/ {print $2}'`
 
 dnl CAPI_VERSION_MAJOR=$(($CAPI_INTERFACE_CURRENT-$CAPI_INTERFACE_AGE))
 dnl the following should be more portable
