Fill out other common macros for autotools

--- a/configure.ac
+++ b/configure.ac
@@ -14,11 +14,6 @@ dnl -- JTS_PORT: the version of JTS this release is bound to
 dnl JTS_PORT=1.13.0
 JTS_PORT=`cat Version.txt | grep ^JTS_PORT | sed 's/[[^=]]*=\([[0-9a-zA-Z\.]]\)/\1/g'`
 
-dnl -- Version info for the CAPI
-dnl CAPI_INTERFACE_CURRENT=13
-dnl CAPI_INTERFACE_REVISION=0
-dnl CAPI_INTERFACE_AGE=12
-
 dnl
 dnl -- Release versions / C++ library SONAME will use these
 dnl -- encoding ABI break at every release
@@ -32,16 +27,19 @@ VERSION_PATCH=${VERSION_PATCH}${PATCH_WORD}
 VERSION="$VERSION_MAJOR.$VERSION_MINOR.$VERSION_PATCH"
 VERSION_RELEASE=`echo "$VERSION" | sed -E 's/^([[0-9]+\.[0-9]+\.[0-9]+]).*$/\1/'`
 
-CAPI_INTERFACE_CURRENT=`cat Version.txt  | awk -F= '/^CAPI_INTERFACE_CURRENT/ {print $2}'`
-CAPI_INTERFACE_REVISION=`cat Version.txt | awk -F= '/^CAPI_INTERFACE_REVISION/ {print $2}'`
-CAPI_INTERFACE_AGE=`cat Version.txt      | awk -F= '/^CAPI_INTERFACE_AGE/ {print $2}'`
+INTERFACE_CURRENT=`cat Version.txt  | awk -F= '/^CAPI_INTERFACE_CURRENT/ {print $2}'`
+INTERFACE_REVISION=`cat Version.txt | awk -F= '/^CAPI_INTERFACE_REVISION/ {print $2}'`
+INTERFACE_AGE=`cat Version.txt      | awk -F= '/^CAPI_INTERFACE_AGE/ {print $2}'`
 
-dnl CAPI_VERSION_MAJOR=$(($CAPI_INTERFACE_CURRENT-$CAPI_INTERFACE_AGE))
+dnl CAPI_VERSION_MAJOR=$(($INTERFACE_CURRENT-$INTERFACE_AGE))
 dnl the following should be more portable
-CAPI_VERSION_MAJOR=`expr $CAPI_INTERFACE_CURRENT - $CAPI_INTERFACE_AGE`
-CAPI_VERSION_MINOR=$CAPI_INTERFACE_AGE
-CAPI_VERSION_PATCH=$CAPI_INTERFACE_REVISION
+CAPI_VERSION_MAJOR=`expr $INTERFACE_CURRENT - $INTERFACE_AGE`
+CAPI_VERSION_MINOR=$INTERFACE_AGE
+CAPI_VERSION_PATCH=$INTERFACE_REVISION
 CAPI_VERSION="$CAPI_VERSION_MAJOR.$CAPI_VERSION_MINOR.$CAPI_VERSION_PATCH"
+CAPI_INTERFACE_CURRENT=$INTERFACE_CURRENT
+CAPI_INTERFACE_REVISION=INTERFACE_REVISION
+CAPI_INTERFACE_AGE=INTERFACE_AGE
 
 AM_INIT_AUTOMAKE([geos], [$VERSION], [no-define])
 AM_MAINTAINER_MODE
