--- a/configure.ac
+++ b/configure.ac
@@ -38,8 +38,8 @@ CAPI_VERSION_MINOR=$INTERFACE_AGE
 CAPI_VERSION_PATCH=$INTERFACE_REVISION
 CAPI_VERSION="$CAPI_VERSION_MAJOR.$CAPI_VERSION_MINOR.$CAPI_VERSION_PATCH"
 CAPI_INTERFACE_CURRENT=$INTERFACE_CURRENT
-CAPI_INTERFACE_REVISION=INTERFACE_REVISION
-CAPI_INTERFACE_AGE=INTERFACE_AGE
+CAPI_INTERFACE_REVISION=$INTERFACE_REVISION
+CAPI_INTERFACE_AGE=$INTERFACE_AGE
 
 AM_INIT_AUTOMAKE([geos], [$VERSION], [no-define])
 AM_MAINTAINER_MODE
