Clean ups for make dist and build bots

--- a/include/geos/algorithm/Makefile.am
+++ b/include/geos/algorithm/Makefile.am
@@ -26,6 +26,7 @@ geos_HEADERS = \
 	InteriorPointPoint.h \
 	Length.h \
 	LineIntersector.h \
+	MinimumBoundingCircle.h \
 	MinimumDiameter.h \
 	NotRepresentableException.h \
 	Orientation.h \
