--- a/Makefile.am
+++ b/Makefile.am
@@ -24,8 +24,8 @@ SUBDIRS = \
 
 BUILT_SOURCES = geos_revision.h
 
-EXTRA_DIST = acsite.m4 .editorconfig makefile.vc \
-	Version.txt nmake.opt autogen.bat CMakeLists.txt \
+EXTRA_DIST = acsite.m4 .editorconfig \
+	Version.txt CMakeLists.txt \
 	cmake/modules/CheckPrototypeExists.cmake \
 	cmake/modules/COPYING-CMAKE-SCRIPTS \
 	cmake/modules/GenerateSourceGroups.cmake \
