Fix first appveyor issue

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,7 +19,7 @@ if (MSVC AND ("x${CMAKE_VS_PLATFORM_NAME}" STREQUAL "xx64"))
   set(TTMATH_MSVC64_ASM ttmathuint_x86_64_msvc.asm)
   enable_language(ASM_MASM)
   message(STATUS "Enabled MASM to compile '${TTMATH_MSVC64_ASM}'")
-  list(INSERT geos_SOURCES 0 ${CMAKE_CURRENT_SOURCE_DIR}/algorithm/ttmath/${TTMATH_MSVC64_ASM})
+  list(INSERT geos_SOURCES 0 ${CMAKE_SOURCE_DIR}/include/geos/algorithm/ttmath/${TTMATH_MSVC64_ASM})
 endif()
 
 # Include CAPI in OS X framework binary and in static libs
