Quiet warnings, enable ASM build for win64?

--- a/include/geos/algorithm/ttmath/Makefile.am
+++ b/include/geos/algorithm/ttmath/Makefile.am
@@ -20,4 +20,5 @@ geos_HEADERS = \
 	ttmathuint.h \
 	ttmathuint_noasm.h \
 	ttmathuint_x86.h \
-	ttmathuint_x86_64.h
+	ttmathuint_x86_64.h \
+	ttmathuint_x86_64_msvc.asm
