--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ file(GLOB_RECURSE geos_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
 file(GLOB_RECURSE geos_ALL_HEADERS ${CMAKE_SOURCE_DIR}/include/*.h) # fix source_group issue
 
 # Building with Visual C++ x86_64 needs to compile the asm utilities first
+message(STATUS, 'CMAKE_VS_PLATFORM_NAME = ${CMAKE_VS_PLATFORM_NAME}')
 if (MSVC AND ("x${CMAKE_VS_PLATFORM_NAME}" STREQUAL "xx64"))
   set(TTMATH_MSVC64_ASM ttmathuint_x86_64_msvc.asm)
   enable_language(ASM_MASM)
