Astyle 3.1 added to source tree for future spacing compatibility purposes (per strk)

--- a/configure.ac
+++ b/configure.ac
@@ -502,6 +502,7 @@ AC_OUTPUT([
 	tests/thread/Makefile
 	tools/Makefile
 	tools/geos-config
+	tools/astyle/Makefile
 	])
 
 dnl -- echo "---------------------------------------"
