Build perf tests but don't run them by default

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,5 +15,5 @@ add_subdirectory(unit)
 add_subdirectory(xmltester)
 add_subdirectory(bigtest)
 
-# don't run perf tests by default
-#add_subdirectory(perf)
+# perf tests are built but not run by default
+add_subdirectory(perf)
