--- a/tests/perf/operation/buffer/CMakeLists.txt
+++ b/tests/perf/operation/buffer/CMakeLists.txt
@@ -17,5 +17,4 @@ add_executable(perf_iterated_buffer IteratedBufferStressTest.cpp)
 
 target_link_libraries(perf_iterated_buffer geos)
 
-add_test(perf_iterated_buffer
-  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/perf_iterated_buffer)
+#add_test(perf_iterated_buffer ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/perf_iterated_buffer)
