--- a/tests/perf/capi/CMakeLists.txt
+++ b/tests/perf/capi/CMakeLists.txt
@@ -15,4 +15,4 @@ add_executable(perf_memleak_mp_prep memleak_mp_prep.c)
 
 target_link_libraries(perf_memleak_mp_prep geos_c)
 
-add_test(perf_memleak_mp_prep ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/perf_memleak_mp_prep)
+#add_test(perf_memleak_mp_prep ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/perf_memleak_mp_prep)
