--- a/tests/perf/operation/predicate/CMakeLists.txt
+++ b/tests/perf/operation/predicate/CMakeLists.txt
@@ -17,5 +17,4 @@ add_executable(perf_rectangle_intersects RectangleIntersectsPerfTest.cpp)
 
 target_link_libraries(perf_rectangle_intersects geos)
 
-add_test(perf_rectangle_intersects
-  ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/perf_rectangle_intersects)
+#add_test(perf_rectangle_intersects ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/perf_rectangle_intersects)
