--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,30 +18,30 @@ environment:
       BUILDER: CMake
       GENERATOR: "Visual Studio 15 2017 Win64"
       APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    - PLATFORM: x86
-      BUILDER: CMake
-      GENERATOR: "Visual Studio 15 2017"
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    - PLATFORM: x64
-      BUILDER: CMake
-      GENERATOR: "NMake Makefiles"
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    - PLATFORM: x86
-      BUILDER: CMake
-      GENERATOR: "NMake Makefiles"
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
-    - PLATFORM: x64
-      BUILDER: CMake
-      GENERATOR: "Visual Studio 14 2015 Win64"
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-    - PLATFORM: x86
-      BUILDER: CMake
-      GENERATOR: "Visual Studio 14 2015"
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
-    - PLATFORM: x64
-      BUILDER: CMake
-      GENERATOR: "NMake Makefiles"
-      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+#    - PLATFORM: x86
+#      BUILDER: CMake
+#      GENERATOR: "Visual Studio 15 2017"
+#      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+#    - PLATFORM: x64
+#      BUILDER: CMake
+#      GENERATOR: "NMake Makefiles"
+#      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+#    - PLATFORM: x86
+#      BUILDER: CMake
+#      GENERATOR: "NMake Makefiles"
+#      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+#    - PLATFORM: x64
+#      BUILDER: CMake
+#      GENERATOR: "Visual Studio 14 2015 Win64"
+#      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+#    - PLATFORM: x86
+#      BUILDER: CMake
+#      GENERATOR: "Visual Studio 14 2015"
+#      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+#    - PLATFORM: x64
+#      BUILDER: CMake
+#      GENERATOR: "NMake Makefiles"
+#      APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
     - PLATFORM: x86
       BUILDER: CMake
       GENERATOR: "NMake Makefiles"
