--- a/tests/unit/Makefile.am
+++ b/tests/unit/Makefile.am
@@ -176,7 +176,8 @@ geos_unit_SOURCES = \
 	capi/GEOSUnaryUnionTest.cpp \
 	capi/GEOSisValidDetailTest.cpp \
 	capi/GEOSisClosedTest.cpp \
-	capi/GEOSInterpolateTest.cpp
+	capi/GEOSInterpolateTest.cpp \
+	capi/GEOSBuildArea.cpp
 
 noinst_HEADERS = \
 	utility.h
