--- a/tests/xmltester/CMakeLists.txt
+++ b/tests/xmltester/CMakeLists.txt
@@ -63,6 +63,7 @@ if(GEOS_ENABLE_TESTS)
     ${XMLTESTS_DIR}/test.xml
     ${XMLTESTS_DIR}/testLeaksBig.xml
     ${XMLTESTS_DIR}/buildarea.xml
+    ${XMLTESTS_DIR}/makevalid.xml
     ${XMLTESTS_DIR}/general/TestBoundary.xml
     ${XMLTESTS_DIR}/general/TestBuffer.xml
     ${XMLTESTS_DIR}/general/TestBufferMitredJoin.xml
